Put run-tests on 15m timer
Signed-off-by: Eno Compton <ecompton@pivotal.io>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -1,4 +1,8 @@
 resources:
+- name: 15m
+  type: time
+  source: {interval: 15m}
+
 - name: cats
   type: git
   source:
@@ -97,6 +101,8 @@ jobs:
 - name: run-tests
   public: true
   plan:
+  - get: 15m
+    trigger: true
   - get: loggregator
     resource: loggregator-develop
     trigger: true
