Quote bash variables
Signed-off-by: Marc Schunk <Marc.Schunk@de.ibm.com>

--- a/tasks/generic-smoke-test.yml
+++ b/tasks/generic-smoke-test.yml
@@ -13,10 +13,10 @@ run:
 
     # target api
     cf login -a $CF_API \
-        -u $USERNAME \
-        -p $PASSWORD \
-        -s $SPACE \
-        -o $ORG
+        -u "$USERNAME" \
+        -p "$PASSWORD" \
+        -s "$SPACE" \
+        -o "$ORG"
 
     # cf logs to a file
     rm -f output.txt
