--- a/tasks/scalable-syslog-smoke-test.yml
+++ b/tasks/scalable-syslog-smoke-test.yml
@@ -4,7 +4,7 @@ image_resource:
   source:
   - repository: loggregator/bosh20
 inputs:
-- name: loggregator
+- name: scalable-syslog
 params:
   CF_SYSTEM_DOMAIN:
   CF_USERNAME:
@@ -25,6 +25,6 @@ run:
 
     set -e
 
-    cd loggregator/src/tools/smokes
+    cd scalable-syslog/tools/smokes
 
     ./push.sh && ./hammer.sh && ./report.sh && ./teardown.sh
