Extract smoke-test into script

--- a/tasks/generic-smoke-test.yml
+++ b/tasks/generic-smoke-test.yml
@@ -3,67 +3,7 @@ image_resource:
   type: docker-image
   source:
   - repository: loggregator/bosh20
+inputs:
+  - name: loggregator-ci
 run:
-  path: bash
-  args:
-  - -c
-  - |
-    #!/bin/bash
-    set -e -x
-
-    # target api
-    cf login -a $CF_API \
-        -u "$USERNAME" \
-        -p "$PASSWORD" \
-        -s "$SPACE" \
-        -o "$ORG"
-
-    # cf logs to a file
-    rm -f output.txt
-    echo "Collecting logs for $APP_NAME"
-    cf logs "$APP_NAME" > output.txt 2>&1 &
-    sleep 30 #wait 30 seconds for socket connection
-
-    echo "Triggering $APP_NAME"
-    # curl my logspinner
-    curl "$APP_DOMAIN?cycles=$CYCLES&delay=$DELAY$DELAY_UNIT&text=$MESSAGE"
-
-    sleep $WAIT # wait for a bit
-
-    msg_count=$(cat output.txt | grep -c $MESSAGE)
-
-    echo $msg_count
-
-    currenttime=$(date +%s)
-    curl  -X POST -H "Content-type: application/json" \
-    -d "{ \"series\" :
-             [{\"metric\":\"smoke_test.loggregator.msg_count\",
-              \"points\":[[${currenttime}, ${msg_count}]],
-              \"type\":\"gauge\",
-              \"host\":\"${CF_API}\",
-              \"tags\":[\"${APP_NAME}\"]}
-            ]
-        }" \
-    'https://app.datadoghq.com/api/v1/series?api_key='$DATADOG_API_KEY
-
-    curl  -X POST -H "Content-type: application/json" \
-    -d "{ \"series\" :
-             [{\"metric\":\"smoke_test.loggregator.delay\",
-              \"points\":[[${currenttime}, $DELAY]],
-              \"type\":\"gauge\",
-              \"host\":\"${CF_API}\",
-              \"tags\":[\"${APP_NAME}\"]}
-            ]
-        }" \
-    'https://app.datadoghq.com/api/v1/series?api_key='$DATADOG_API_KEY
-
-    curl  -X POST -H "Content-type: application/json" \
-    -d "{ \"series\" :
-             [{\"metric\":\"smoke_test.loggregator.cycles\",
-              \"points\":[[${currenttime}, ${CYCLES}]],
-              \"type\":\"gauge\",
-              \"host\":\"${CF_API}\",
-              \"tags\":[\"${APP_NAME}\"]}
-            ]
-        }" \
-    'https://app.datadoghq.com/api/v1/series?api_key='$DATADOG_API_KEY
+  path: loggregator-ci/scripts/run-smoke-tests.sh
