--- a/pipelines/pws-smoke-tests.yml
+++ b/pipelines/pws-smoke-tests.yml
@@ -9,6 +9,10 @@ resources:
   type: git
   source:
     uri: https://github.com/cloudfoundry/loggregator-ci
+- name: scalable-syslog
+  type: git
+  source:
+    uri: https://github.com/cloudfoundry-incubator/scalable-syslog-release
 
 jobs:
 - name: floodspinner
@@ -60,3 +64,65 @@ jobs:
       DELAY: "500"
       DELAY_UNIT: "ms"
       MESSAGE: "HOURLY"
+
+- name: https-syslog-drain
+  public: false
+  serial: true
+  plan:
+  - get: loggregator-ci
+  - get: scalable-syslog
+  - get: 1h
+    trigger: true
+  - task: v1-drain
+    file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
+    params:
+      CF_ORG: cf-lamb
+      CF_PASSWORD: {{pws-password}}
+      CF_SPACE: development
+      CF_SYSTEM_DOMAIN: run.pivotal.io
+      CF_USERNAME: {{pws-username}}
+      DATADOG_API_KEY: {{datadog-prod-api-key}}
+      DRAIN_VERSION: "1.0"
+      DRAIN_TYPE: "https"
+  - task: v2-drain
+    file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
+    params:
+      CF_ORG: cf-lamb
+      CF_PASSWORD: {{pws-password}}
+      CF_SPACE: development
+      CF_SYSTEM_DOMAIN: run.pivotal.io
+      CF_USERNAME: {{pws-username}}
+      DATADOG_API_KEY: {{datadog-prod-api-key}}
+      DRAIN_VERSION: "2.0"
+      DRAIN_TYPE: "https"
+
+- name: tcp-syslog-drain
+  public: false
+  serial: true
+  plan:
+  - get: loggregator-ci
+  - get: scalable-syslog
+  - get: 1h
+    trigger: true
+  - task: v1-drain
+    file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
+    params:
+      CF_ORG: cf-lamb
+      CF_PASSWORD: {{pws-password}}
+      CF_SPACE: development
+      CF_SYSTEM_DOMAIN: run.pivotal.io
+      CF_USERNAME: {{pws-username}}
+      DATADOG_API_KEY: {{datadog-prod-api-key}}
+      DRAIN_VERSION: "1.0"
+      DRAIN_TYPE: "syslog"
+  - task: v2-drain
+    file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
+    params:
+      CF_ORG: cf-lamb
+      CF_PASSWORD: {{pws-password}}
+      CF_SPACE: development
+      CF_SYSTEM_DOMAIN: run.pivotal.io
+      CF_USERNAME: {{pws-username}}
+      DATADOG_API_KEY: {{datadog-prod-api-key}}
+      DRAIN_VERSION: "2.0"
+      DRAIN_TYPE: "syslog"
