Move scalable-syslog(-release) to code.cloudfoundry.org/scalable-syslog
[#143966461]

Signed-off-by: Warren Fernandes <warren.f.fernandes@gmail.com>

--- a/pipelines/pws-eu.yml
+++ b/pipelines/pws-eu.yml
@@ -12,7 +12,7 @@ resources:
 - name: scalable-syslog-release
   type: git
   source:
-    uri: https://github.com/cloudfoundry-incubator/scalable-syslog-release
+    uri: https://code.cloudfoundry.org/scalable-syslog-release
 
 jobs:
 - name: floodspinner
