--- a/scripts.yml
+++ b/scripts.yml
@@ -140,14 +140,14 @@ scalable_syslog_tests: |
 
   set -e -x
 
-  rm -rf scalable-syslog-release/src/github.com/cloudfoundry-incubator/scalable-syslog/{*,.git}
-  cp -r scalable-syslog/. scalable-syslog-release/src/github.com/cloudfoundry-incubator/scalable-syslog/
+  rm -rf scalable-syslog-release/src/code.cloudfoundry.org/scalable-syslog/{*,.git}
+  cp -r scalable-syslog/. scalable-syslog-release/src/code.cloudfoundry.org/scalable-syslog/
 
   pushd scalable-syslog-release
     export GOPATH="$PWD"
     export PATH="$GOPATH/bin:$PATH"
     go install github.com/onsi/ginkgo/ginkgo
-    go test ./src/github.com/cloudfoundry-incubator/scalable-syslog/... -race
+    go test ./src/code.cloudfoundry.org/scalable-syslog/... -race
   popd
 scalable_syslog_sync_package_specs: |
   #!/bin/bash
