--- a/pipelines/go-loggregator.yml
+++ b/pipelines/go-loggregator.yml
@@ -16,7 +16,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/go17
+        - repository: golang
       platform: linux
       inputs:
       - name: go-loggregator
