Install ginkgo in go-loggregator
Signed-off-by: Eno Compton <ecompton@pivotal.io>

--- a/pipelines/go-loggregator.yml
+++ b/pipelines/go-loggregator.yml
@@ -36,5 +36,7 @@ jobs:
 
           cd $GOPATH/src/code.cloudfoundry.org/go-loggregator
 
+          go get github.com/onsi/ginkgo/ginkgo
+
           ./scripts/dep-ensure
           ./scripts/test
