Adds extra ops files
Signed-off-by: Warren Fernandes <warren.f.fernandes@gmail.com>

--- a/tasks/create-bosh-lite.yml
+++ b/tasks/create-bosh-lite.yml
@@ -30,7 +30,9 @@ run:
       bosh create-env bosh-deployment/bosh.yml \
         --state $deploy_dir/state.json \
         -o bosh-deployment/gcp/cpi.yml \
+        -o bosh-deployment/local-dns.yml \
         -o bosh-deployment/bosh-lite.yml \
+        -o bosh-deployment/bosh-lite-runc.yml \
         -o bosh-deployment/jumpbox-user.yml \
         -o $deploy_dir/lite-ops.yml \
         --vars-store $deploy_dir/creds.yml \
