add 15m trigger to latency test
Signed-off-by: Brady Love <blove@pivotal.io>

--- a/pipelines/pws-us.yml
+++ b/pipelines/pws-us.yml
@@ -189,6 +189,8 @@ jobs:
   serial: true
   plan:
   - get: loggregator
+  - get: 15m
+    trigger: true
   - task: run-latency-tests
     file: loggregator-ci/tasks/latency-test.yml
     params:
