add gopath to latency tests
Signed-off-by: Eno Compton <ecompton@pivotal.io>

--- a/pipelines/pws-us.yml
+++ b/pipelines/pws-us.yml
@@ -189,6 +189,7 @@ jobs:
   serial: true
   plan:
   - get: loggregator
+  - get: loggregator-ci
   - get: 15m
     trigger: true
   - task: run-latency-tests
