--- a/pipelines/pws-us.yml
+++ b/pipelines/pws-us.yml
@@ -48,6 +48,7 @@ jobs:
     params:
       CF_API: "api.run.pivotal.io"
       APP_DOMAIN: "floodspinner.cfapps.io"
+      LOGGREGATOR_ADDR: "doppler.run.pivotal.io:443"
       ORG: "cf-lamb"
       SPACE: "development"
       APP_NAME: "floodspinner"
