--- a/pipelines/bluemix.yml
+++ b/pipelines/bluemix.yml
@@ -34,6 +34,23 @@ jobs:
       APP_DOMAIN: "floodspinner.mybluemix.net"
       ORG: "Cloud Foundry Flintstone"
       SPACE: loggregator
+  - task: run-recent-logs-smoke-tests
+    file: loggregator-ci/tasks/generic-recent-logs-smoke-test.yml
+    params:
+      CYCLES: 10000
+      DELAY: "2"
+      DELAY_UNIT: "us"
+      MESSAGE: "FIFTEEN-MINUTE"
+      APP_NAME: "floodspinner"
+      WAIT: 300
+      USERNAME: {{bluemix-username}}
+      PASSWORD: {{bluemix-password}}
+      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+      CF_API: "api.ng.bluemix.net"
+      APP_DOMAIN: "floodspinner.mybluemix.net"
+      LOGGREGATOR_ADDR: "wss://doppler.ng.bluemix.net:443"
+      ORG: "Cloud Foundry Flintstone"
+      SPACE: loggregator
 
 - name: dripspinner
   public: false
